# palantir

./: .gitignore  Cargo.toml  README.md
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/net/: Cargo.toml
crates/net/src/: eth.rs  ip.rs  lib.rs  tcp.rs  udp.rs
crates/palantir/: Cargo.toml  build.rs
crates/palantir-ebpf/: Cargo.toml  build.rs
crates/palantir-ebpf-common/: Cargo.toml
crates/palantir-ebpf-common/src/: lib.rs
crates/palantir-ebpf/src/: main.rs  sock.rs
crates/palantir/src/: api.rs  event.rs  main.rs  resolver.rs
web/: index.html  package-lock.json  package.json
web/src/: main.ts  style.css  utils.ts
web/src/assets/: land.json
web/src/beacon/: beacon.ts
web/src/globe/: fragment.glsl  globe.ts  vertex.glsl
web/src/lib/assets/: countries.json
web/src/lib/geometries/: beacon.ts  country.ts  globe.ts  trace.ts
web/src/lib/types/: event.ts
web/src/lib/utils/: format.ts  geo.ts  glsl.ts
web/src/routes/: +page.svelte
web/src/trace/: fragment.glsl  trace.ts  vertex.glsl
