[package]
name = "palantir-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
palantir-ebpf-common = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "palantir"
path = "src/main.rs"
