[package]
name = "palantir"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "palantir"
path = "src/main.rs"

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
models = { workspace = true }

[build-dependencies]
aya-build = { workspace = true }
palantir-ebpf = { path = "../palantir-ebpf" }
