[package]
name = "palantir"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "palantir"
path = "src/main.rs"

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
axum = { workspace = true, features = ["http1", "http2", "tokio", "macros", "tower-log"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
futures-util = { workspace = true }
palantir-ebpf-common = { workspace = true }
async-stream = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true, features = ["std"]}
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["http2", "native-tls", "gzip", "json"] }


[build-dependencies]
aya-build = { workspace = true }
palantir-ebpf = { path = "../palantir-ebpf" }
